--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
      </style>
      <h1 class="header">College for Research and Technology of Cabanatuan</h1>
      <div class="topnav">
-          <a href="galerry.html">Home</a>
+          <a href="home.html">Home</a>
           <a href="gallery.html">Gallery</a>
           <image src="crt logo.png" style="height: 50px; width: 60px;"></image>
           <a href="about.html">About</a>
